--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-URL = "https://TommyOD97.github.io"
+URL = "https://github.com/TommyOD97/TommyOD97.github.io.git"
 googleAnalytics = "UA-159072578-1"
 title = "Simon Jaeger"
 theme = "academimal"
