--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 RelativeURLs = true
-googleAnalytics = "UA-159072578-1"
+googleAnalytics = ""
 title = "Simon Jaeger"
 theme = "academimal"
 sectionPagesMenu = "main"
