--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -2,7 +2,7 @@
 workingpapers:
 
 - title: "Voices at Work"
-  pdflink: "https://http://economics.mit.edu/files/21196.pdf"
+  pdflink: "https://economics.mit.edu/files/21196.pdf"
   coauthors: "Jarkko Harju and Benjamin Schoefer"
   book: "Working Paper"
   year: "2021" 
