--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -26,7 +26,7 @@ workingpapers:
     - url: "https://scholar.harvard.edu/files/stantcheva/files/stantcheva_covid_inequalities.pdf"
       text: "Slides"
   abstract: >
-    This paper summarizes some of the major inequalities that have been exacerbated by the COVID- 19 pandemic and discusses avenues for policy intervention over the medium and long run.
+    This paper summarizes some of the most major inequalities that have been exacerbated by the COVID- 19 pandemic and discusses avenues for policy intervention over the medium and long run.
   
 
 - title: "Social Position and Fairness Views"
