--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -3,6 +3,7 @@ workingpapers:
 
 - title: "Long-Term Effects of Equal Sharing: Evidence from Inheritance Rules for Land"
   pdflink: "http://economics.mit.edu/files/20830.pdf"
+  book: "Working Paper"
   coauthors: "Charlotte Bartels and Natalie Obergruber"
   abstract: >
     What are the long-term economic effects of a more equal distribution of wealth? We exploit variation in historical inheritance rules for land traversing political, linguistic, geological, and religious borders in Germany. In some German areas, inherited land was to be shared or divided equally among children, while in others land was ruled to be indivisible. Using a geographic regression discontinuity design, we show that equal division of land led to a more equal distribution of land; other potential drivers of growth are smooth at the boundary and equal division areas were not historically more developed. Today, equal division areas feature higher average incomes and a right-shifted skill, income, and wealth distribution. Higher top incomes and top wealth in equal division areas coincide with higher education, and higher labor productivity. We show evidence consistent with the more even distribution of land leading to more innovative industrial by-employment during Germany’s transition from an agrarian to an industrial economy and, in the longrun, more entrepreneurship.
