--- a/config.toml
+++ b/config.toml
@@ -1,17 +1,17 @@
 baseurl = ""
 googleAnalytics = ""
-title = "Simon Jaeger"
+title = "Frank Schilbach"
 theme = "academimal"
 sectionPagesMenu = "main"
 defaultContentLanguage = "en"
 disableKinds = ["taxonomy", "taxonomyTerm"]
 
 [author]
-name = "Simon Jaeger"
+name = "Frank Schilbach"
 
 [params]
-title = "Assistant Professor of Economics,"
+title = "Associate Professor of Economics,"
 institution = "Massachusetts Institute of Technology"
-logo = "Simon_Jaeger.jpg"
-Twitter = "Simon_Jaeger"
-Email = "sjaeger@mit.edu"
+logo = "Frank_profile.jpg"
+Twitter = "@frankschilbach"
+Email = "fschilbach@mit.edu"
