--- a/config.toml
+++ b/config.toml
@@ -13,5 +13,5 @@ name = "Frank Schilbach"
 title = "Associate Professor of Economics,"
 institution = "Massachusetts Institute of Technology"
 logo = "Frank_profile.jpg"
-Twitter = "@frankschilbach"
+Twitter = "frankschilbach"
 Email = "fschilbach@mit.edu"
