--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -63,6 +63,22 @@ publications:
     - url: "https://voxdev.org/topic/macroeconomics-growth/using-behavioural-economics-development-policy"
       text: "VoxDev (Kremer & Rao)"
 
+- title: "Poverty, Depression, and Anxiety: Causal Evidence and Mechanisms"
+  coauthors: "Matthew Ridley, Gautam Rao, and Vikram Patel"
+  book: "Science 2020, Volume 370, Issue 6522"
+  year: "2020"
+
+- title: "Realizing the Potential of Digital Development: The Case of Agriculture"
+ coauthors: "Raissa Fabregas and Michael Kremer"
+ book: "Science 2019, Volume 366, Issue 6471"
+ year: "2019"
+
+
+- title: "Alcohol and Self-Control: A Field Experiment in India"
+ book: "American Economic Review 2019, 109(4): 1290-1322"
+ year: "2019"
+
+
 - title: "Poverty and Cognitive Function"
   pdflink: "https://economics.mit.edu/files/18815"
   book: "The Economics of Asset Accumulation and Poverty Traps."
