--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -94,8 +94,8 @@ publications:
     - url: "https://economics.mit.edu/files/12715"
       text: "Online Appendix"
   
-WorksinProgress:
-  
+worksinprogress:
+
 - title: The Long-Run Impacts of Psychotherapy for Depression 
   coauthors: "Bhargav Bhat, Jon de Quidt, Johannes Haushofer, Vikram Patel, Gautam Rao, and Pierre-Luc Vautrey" 
 
