--- a/config.toml
+++ b/config.toml
@@ -14,4 +14,4 @@ title = "Associate Professor of Economics,"
 institution = "Massachusetts Institute of Technology"
 logo = "Frank_profile.jpg"
 Twitter = "frankschilbach"
-Email = "fschilbach@mit.edu"
+Email = "fschilb@mit.edu"
